--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,14 @@
 			<artifactId>client-java-extended</artifactId>
 			<version>23.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.github.ben-manes.caffeine</groupId>
+			<artifactId>caffeine</artifactId>
+		</dependency>
 
 
 		<dependency>
