--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,21 @@ spring:
   threads:
     virtual:
       enabled: true
+  cache:
+    type: caffeine
+
+
+  data:
+    redis:
+      repositories:
+        enabled: true
+      host: localhost
+      port: 6379
+      timeout: 2000
+      password: notasecret
+#      database: 0
+#      cluster:
+#        nodes: 127.0.0.1:6379,127.0.0.1:6380,127.0.0.1:6381
 
 management:
   endpoints:
