--- a/kubernetes/kustomize/overlays/kind/kustomization.yaml
+++ b/kubernetes/kustomize/overlays/kind/kustomization.yaml
@@ -1,8 +1,14 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 resources:
   - ../../base
-
 patches:
   - path: deployment-patch.yaml
     target:
       kind: Deployment
       name: kube-app-version
+  - path: clusterrolebinding.yaml
+    target:
+      kind: ClusterRoleBinding
+      name: kube-app-version-read-argocd
+
