--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,15 +41,21 @@ spring:
     redis:
       repositories:
         enabled: true
-      host: localhost
-      port: 6379
+      host: ${REDIS_HOST:127.0.0.1}
+      port: ${REDIS_PORT:6379}
       timeout: 2000
-      password: notasecret
+      password: ${REDIS_PASSWORD:notasecret}
 #      database: 0
 #      cluster:
 #        nodes: 127.0.0.1:6379,127.0.0.1:6380,127.0.0.1:6381
 
 management:
+  tracing:
+    sampling:
+      probability: '1.0'
+  otlp:
+    tracing:
+      endpoint: http://otel-collector-opentelemetry-collector.default.svc.cluster.local:4318/v1/traces
   endpoints:
     enabled-by-default: true
     jmx:
