--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,14 @@
 			<version>0.10.2</version> <!-- Check for the latest version -->
 		</dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.yaml</groupId>
 			<artifactId>snakeyaml</artifactId>
-			<version>2.2</version> <!-- Use the latest stable version -->
+			<version>2.4</version> <!-- Use the latest stable version -->
 		</dependency>
 		<dependency>
 			<groupId>io.kubernetes</groupId>
@@ -95,12 +99,6 @@
 			<artifactId>micrometer-tracing-bridge-otel</artifactId>
 			<version>1.5.1</version>
 		</dependency>
-		<dependency>
-			<groupId>io.opentelemetry</groupId>
-			<artifactId>opentelemetry-exporter-otlp</artifactId>
-			<version>1.51.0</version>
-		</dependency>
-
 
 		<dependency>
 			<groupId>io.opentelemetry</groupId>
