--- a/kubernetes/kustomize/overlays/kind/deployment-patch.yaml
+++ b/kubernetes/kustomize/overlays/kind/deployment-patch.yaml
@@ -7,7 +7,7 @@ spec:
     spec:
       containers:
         - name: kube-app-version
-          image:  ghcr.io/joostvdg/kube-app-version:0.7.0@sha256:f789dc8f86cecd5ad8ba87a06fa62c11eddc565006b0efef3f76a70b04b76f4f
+          image:  ghcr.io/joostvdg/kube-app-version@sha256:0e2504a3d3d7ae9572de62bfd586e461ded123f210015a84a3dc062d4c22e834
           env:
             - name: APP_REDIS_MODE
               value: "OPTIONAL"
