use chart name for finding chart versions

--- a/examples/argocd-applications/cloudbees.yaml
+++ b/examples/argocd-applications/cloudbees.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cloudbees
+  name: cloudbees-core
   namespace: argocd
 spec:
   destination:
@@ -9,5 +9,5 @@ spec:
   project: default
   source:
     chart: cloudbees-core
-    repoURL: https://public-charts.artifacts.cloudbees.com/repository/public/
+    repoURL: https://public-charts.artifacts.cloudbees.com/repository/public
     targetRevision: "3.27955.0+b43bef0bd03a"
